--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ const CATALOG = [
         courses: [
           "アプリケーションエンジニアのためのAWS入門 -EC2,S3,VPC,CDK-",
           "サーバーレスアプリケーション開発 -Lambda、API Gateway、Cognito-",
-          "Architecting on AWS（試験バウチャーなし）",
+          "Architecting on AWS（試験バウチャー無）",
           "Architecting on AWS（試験バウチャー付）",
           "Advanced Architecting on AWS（試験バウチャーなし）",
           "Advanced Architecting on AWS（試験バウチャー付）",
