java spring separate

--- a/index.html
+++ b/index.html
@@ -280,7 +280,25 @@ const CATALOG = [
     color: "#4f8cff",
     subs: [
       {
-        title: "Java / Spring",
+        title: "Java",
+        courses: [
+          "Javaプログラミング入門 -Java 25対応で初心者にやさしい-",
+          "Javaプログラミング基礎 -開発現場を見据えた次のステップ-",
+          "Javaプログラミング作法 -Effective Javaで知るプログラミングの定石-",
+          "JUnitによるテスト入門",
+          "Spring Boot 4 ではじめる Webアプリケーション開発入門",
+          "Spring Boot 4 ではじめる Webサービス開発入門 REST編",
+          "Spring Securityではじめる認証・認可入門",
+          "＜速習＞Spring Boot 3 へのマイグレーション",
+          "Spring Boot 4 ではじめる Webサービス開発 GraphQL編",
+          "Spring Boot テスト 入門",
+          "Keycloakを活用した分散アプリ開発 -OAuth/OpenID Connectを用いた認証・認可の実装-",
+          "Spring Inside・DIコンテナ -ソースコードから読み解くDIコンテナ詳細-",
+          "Spring Inside・Spring Web MVC -ソースコードから読み解くSpring Web MVC詳細-",
+        ]
+      },
+      {
+        title: "Spring",
         courses: [
           "Javaプログラミング入門 -Java 25対応で初心者にやさしい-",
           "Javaプログラミング基礎 -開発現場を見据えた次のステップ-",
